--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.1.3",
     "material-ui": "^0.20.2",
+    "npm": "^7.11.2",
     "react": "^16.13.1",
+    "react-background-slider": "^2.0.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-slideshow-image": "^3.4.6",
     "react-social-icons": "^4.1.0"
   },
   "scripts": {
