--- a/package.json
+++ b/package.json
@@ -3,22 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "3d-react-carousal": "^3.1.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.1.3",
+    "antd-image-slide": "^1.0.8",
     "material-ui": "^0.20.2",
     "npm": "^7.11.2",
     "react": "^16.13.1",
     "react-background-slider": "^2.0.0",
     "react-dom": "^16.13.1",
     "react-photo-gallery": "^8.0.0",
+    "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-slideshow-image": "^3.4.6",
-    "react-social-icons": "^4.1.0"
+    "react-social-icons": "^4.1.0",
+    "swiper": "^6.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
